--- a/MyFlatWPF/View/ManagementView/OrdersView.xaml
+++ b/MyFlatWPF/View/ManagementView/OrdersView.xaml
@@ -4,10 +4,17 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:MyFlatWPF.View.ManagementView"
+             xmlns:viewModel="clr-namespace:MyFlatWPF.Commands.ManagementCommand"
              mc:Ignorable="d" 
              d:DesignHeight="800" 
              d:DesignWidth="500">
     <Grid>
+
+        <Grid.Resources>
+
+            <viewModel:ShowOrdersByServiceNameCommand x:Key="ShowOrdersByServiceNameCommand"/>
+            
+        </Grid.Resources>
         
 
         <Grid.RowDefinitions>
@@ -23,7 +30,7 @@
                    Grid.Row="0"
                    Text=""
                    FontSize="24"
-                   Margin="0 20 0 20">
+                   Margin="20 20 0 20">
             
         </TextBlock>
 
@@ -31,18 +38,156 @@
                    Grid.Row="1"
                    Text=""
                    FontSize="20"
-                   Margin="0 20 0 20">
+                   Margin="20 0 0 20">
 
         </TextBlock>
 
         <DataGrid x:Name="dgOrders"
                   Grid.Row="2"
+                  Width="600"
+                  Padding="10 0 10 20"
+                  Background="Transparent"
+                  BorderBrush="Transparent"
+                  BorderThickness="0 1 0 0"
                   HorizontalAlignment="Center"
-                  Margin="0 10 0 20"
-                  AutoGenerateColumns="False">
-            
-            
-                  
+                  HorizontalContentAlignment="Center"
+                  CanUserAddRows="false"
+                  ItemsSource="{Binding Orders, 
+            Source={StaticResource ShowOrdersByServiceNameCommand},
+            UpdateSourceTrigger=PropertyChanged}"
+                  AutoGenerateColumns="False"
+                  Margin="0 10 0 20">
+            <DataGrid.Columns>
+                
+            <DataGridTextColumn Header="Id"
+                                Width="20"
+                                IsReadOnly="True"
+                                Binding="{Binding Id,
+                                            UpdateSourceTrigger=PropertyChanged}">
+                    <DataGridTextColumn.ElementStyle>
+                        <Style>
+                            <Setter Property="TextBlock.HorizontalAlignment" Value="Center" />
+                            <Setter Property="TextBlock.VerticalAlignment" Value="Center" />
+                        </Style>
+                    </DataGridTextColumn.ElementStyle>
+                </DataGridTextColumn>
+                
+            <DataGridTextColumn Header="Date Create" 
+                                Width="70"
+                                IsReadOnly="True"
+                                Binding="{Binding DateCreate,
+                                StringFormat=dd.MM.yyyy HH:mm:ss,
+                                Mode=OneWay}">
+                    <DataGridTextColumn.ElementStyle>
+                        <Style>
+                            <Setter Property="TextBlock.TextWrapping" Value="Wrap" />
+                            <Setter Property="TextBlock.HorizontalAlignment" Value="Center" />
+                            <Setter Property="TextBlock.VerticalAlignment" Value="Center" />
+                        </Style>
+                    </DataGridTextColumn.ElementStyle>
+                </DataGridTextColumn>
+
+                <DataGridTextColumn Header="Name"
+                                    Width="*"
+                                    IsReadOnly="True"
+                                    Binding="{Binding Name}">
+                    <DataGridTextColumn.ElementStyle>
+                        <Style>
+                            <Setter Property="TextBlock.TextWrapping" Value="Wrap" />
+                            <Setter Property="TextBlock.HorizontalAlignment" Value="Center" />
+                            <Setter Property="TextBlock.VerticalAlignment" Value="Center" />
+                        </Style>
+                    </DataGridTextColumn.ElementStyle>
+                </DataGridTextColumn>
+                
+                <DataGridTextColumn Header="Email"
+                                    Width="80"
+                                    IsReadOnly="True"
+                                Binding="{Binding Email}">
+                    <DataGridTextColumn.ElementStyle>
+                        <Style>
+                            <Setter Property="TextBlock.TextWrapping" Value="Wrap" />
+                            <Setter Property="TextBlock.HorizontalAlignment" Value="Center" />
+                            <Setter Property="TextBlock.VerticalAlignment" Value="Center" />
+                        </Style>
+                    </DataGridTextColumn.ElementStyle>
+                </DataGridTextColumn>
+                
+                <DataGridTextColumn Header="Mobile"
+                                    IsReadOnly="True"
+                                Binding="{Binding Mobile}">
+                    <DataGridTextColumn.ElementStyle>
+                        <Style>
+                            <Setter Property="TextBlock.TextWrapping" Value="Wrap" />
+                            <Setter Property="TextBlock.HorizontalAlignment" Value="Center" />
+                            <Setter Property="TextBlock.VerticalAlignment" Value="Center" />
+                        </Style>
+                    </DataGridTextColumn.ElementStyle>
+                </DataGridTextColumn>
+                
+            <DataGridTextColumn Header="Message"
+                                Width="80"
+                                FontSize="8"
+                                    IsReadOnly="True"
+                                Binding="{Binding Message}">
+                    <DataGridTextColumn.ElementStyle>
+                        <Style>
+                            <Setter Property="TextBlock.TextWrapping" Value="Wrap" />
+                            <Setter Property="TextBlock.HorizontalAlignment" Value="Center" />
+                            <Setter Property="TextBlock.VerticalAlignment" Value="Center" />
+                        </Style>
+                    </DataGridTextColumn.ElementStyle>
+                </DataGridTextColumn>
+                
+                <DataGridTextColumn Header="Service Name"
+                                    Width="85"
+                                    IsReadOnly="True"
+                                    Binding="{Binding ServiceName}">
+                    <DataGridTextColumn.ElementStyle>
+                        <Style>
+                            <Setter Property="TextBlock.TextWrapping" Value="Wrap" />
+                            <Setter Property="TextBlock.HorizontalAlignment" Value="Center" />
+                            <Setter Property="TextBlock.VerticalAlignment" Value="Center" />
+                        </Style>
+                    </DataGridTextColumn.ElementStyle>
+                </DataGridTextColumn>
+                
+                <DataGridComboBoxColumn x:Name="dgComboBox"
+                                        Header="Status Name (changeable)"
+                                        Width="90"
+                                        SelectedItemBinding="{Binding StatusName}" 
+                                        SelectedValuePath="Id">
+                    <DataGridComboBoxColumn.HeaderStyle>
+                        <Style TargetType="DataGridColumnHeader">
+                            <Setter Property="ContentTemplate">
+                                <Setter.Value>
+                                    <DataTemplate>
+                                        <TextBlock TextWrapping="Wrap" 
+                                                   Text="{Binding}"
+                                                   FontSize="12">
+                                        </TextBlock>
+                                    </DataTemplate>
+                                </Setter.Value>
+                            </Setter>
+                        </Style>
+                    </DataGridComboBoxColumn.HeaderStyle>
+                    <DataGridComboBoxColumn.ElementStyle>
+                        <Style>
+                            <Setter Property="TextBlock.TextWrapping" Value="Wrap" />
+                            <Setter Property="TextBlock.HorizontalAlignment" Value="Center" />
+                            <Setter Property="TextBlock.VerticalAlignment" Value="Center" />
+                        </Style>
+                    </DataGridComboBoxColumn.ElementStyle>
+                    <DataGridComboBoxColumn.EditingElementStyle>
+                        <Style TargetType="{x:Type ComboBox}">
+                            <EventSetter Event="SelectionChanged" 
+                                         Handler="Cb_SelectionChanged" />
+                        </Style>
+                    </DataGridComboBoxColumn.EditingElementStyle>
+                </DataGridComboBoxColumn>
+
+
+            </DataGrid.Columns>
         </DataGrid>
 
     </Grid>
