--- a/MyFlatWPF/View/ManagementView/AllOrdersView.xaml
+++ b/MyFlatWPF/View/ManagementView/AllOrdersView.xaml
@@ -14,12 +14,69 @@
 
             <viewModel:AllOrdersViewModel x:Key="AllOrdersViewModel"/>
 
+            <Style x:Key="ButtonStyle" TargetType="{x:Type Button}">
+                <Setter Property="Height" Value="30"/>
+                <Setter Property="FontSize" Value="12"/>
+                <Setter Property="FontWeight" Value="SemiBold"/>
+                <Setter Property="Cursor" Value="Hand"/>
+                <Setter Property="VerticalAlignment" Value="Center"/>
+                <Setter Property="Margin" Value="3 0 0 0"/>
+                <Setter Property="Template">
+                    <Setter.Value>
+                        <ControlTemplate TargetType="Button">
+                            <Border CornerRadius="3"
+                                    BorderThickness="1"
+                                    BorderBrush="Black"
+                                    Background="DeepSkyBlue">
+                                <ContentPresenter HorizontalAlignment="Center"
+                                                  VerticalAlignment="Center"/>
+                            </Border>
+                        </ControlTemplate>
+                    </Setter.Value>
+                </Setter>
+            </Style>
+
+            <Style x:Key="ButtonByPeriodStyle" TargetType="{x:Type Button}">
+                <Setter Property="Height" Value="30"/>
+                <Setter Property="FontSize" Value="12"/>
+                <Setter Property="FontWeight" Value="SemiBold"/>
+                <Setter Property="Cursor" Value="Hand"/>
+                <Setter Property="VerticalAlignment" Value="Center"/>
+                <Setter Property="Margin" Value="3 0 0 0"/>
+                <Setter Property="Template">
+                    <Setter.Value>
+                        <ControlTemplate TargetType="Button">
+                            <Border CornerRadius="3 0 0 3"
+                                    BorderThickness="1 1 0 1"
+                                    BorderBrush="Black"
+                                    Background="DeepSkyBlue">
+                                <ContentPresenter HorizontalAlignment="Center"
+                                                  VerticalAlignment="Center"/>
+                            </Border>
+                        </ControlTemplate>
+                    </Setter.Value>
+                </Setter>
+            </Style>
+
+            <Style x:Key="DatePickerStyle" TargetType="{x:Type DatePicker}">
+                <Setter Property="Height" Value="30"/>
+                <Setter Property="Width" Value="105"/>
+                <Setter Property="FontSize" Value="12"/>
+                <Setter Property="Cursor" Value="Hand"/>
+                <Setter Property="Background" Value="DeepSkyBlue"/>
+                <Setter Property="VerticalAlignment" Value="Center"/>
+                <Setter Property="HorizontalAlignment" Value="Left"/>
+                <Setter Property="Margin" Value="0 0 0 0"/>
+                <Setter Property="BorderBrush" Value="Black"/>
+            </Style>
+
         </Grid.Resources>
 
 
         <Grid.RowDefinitions>
             <RowDefinition Height="15*"/>
-            <RowDefinition Height="15*"/>
+            <RowDefinition Height="10*"/>
+            <RowDefinition Height="10*"/>
             <RowDefinition Height="140*"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
@@ -31,23 +88,145 @@
                    Grid.ColumnSpan="2"
                    Text="All Orders"
                    FontSize="24"
-                   Margin="20 20 0 20">
-
+                   Margin="25 20 0 20">
         </TextBlock>
 
+        <StackPanel x:Name="spOrdersByPeriod"
+                    Grid.Row="1"
+                    Grid.ColumnSpan="2"
+                    Orientation="Horizontal"
+                    VerticalAlignment="Center"
+                    Margin="5 0 0 0">
+
+            <Button x:Name="btnToday"
+                Width="55"
+                Content="Today"
+                Margin="20 0 0 0"
+                ToolTip="Orders for Today"
+                Style="{StaticResource ButtonStyle}">
+            </Button>
+
+            <Button x:Name="btnYesterday"
+                Width="70"
+                Content="Yesterday"
+                ToolTip="Orders for Yesterday"
+                Style="{StaticResource ButtonStyle}">
+            </Button>
+
+            <Button x:Name="btnWeek"
+                Width="50"
+                Content="Week"
+                ToolTip="Orders for Week"
+                Style="{StaticResource ButtonStyle}">
+            </Button>
+
+            <Button x:Name="btnMonth"
+                Width="55"
+                Content="Month"
+                ToolTip="Orders for Month"
+                Style="{StaticResource ButtonStyle}">
+            </Button>
+
+            <Button x:Name="btnByPeriod"
+                Width="80"
+                Content="Period from"
+                ToolTip="Orders by Period"
+                Style="{StaticResource ButtonByPeriodStyle}">
+            </Button>
+
+            <DatePicker x:Name="dpDateFrom" 
+                        xml:lang="en-US"  
+                        Style="{StaticResource DatePickerStyle}"
+                        BorderThickness="0 1 0 1"
+                        FirstDayOfWeek="Monday"
+                        Padding="0 5 0 5">
+                <DatePicker.Resources>
+                    <Style TargetType="DatePickerTextBox">
+                        <Setter Property="Text" Value=" Date from"/>
+                        <Setter Property="IsReadOnly" Value="True"/>
+                        <Setter Property="Focusable" Value="False"/>
+                        <Setter Property="Control.Template">
+                            <Setter.Value>
+                                <ControlTemplate>
+                                    <TextBox x:Name="TextBoxFrom"
+                                             Text="{Binding Path=SelectedDate, 
+                                                    StringFormat='dd.MM.yyyy', 
+                                                    RelativeSource={RelativeSource AncestorType={x:Type DatePicker}}}"
+                                             Padding="5 0 0 0"/>
+                                </ControlTemplate>
+                            </Setter.Value>
+                        </Setter>
+                    </Style>
+                </DatePicker.Resources>
+            </DatePicker>
+
+            <Border Height="30"
+                       Width="20"
+                       HorizontalAlignment="Left"
+                       Background="DeepSkyBlue"
+                       BorderBrush="Black"
+                       BorderThickness="0 1 0 1"
+                       VerticalAlignment="Center">
+                <TextBlock Text="to"
+                           Width="20"
+                           FontSize="12"
+                           FontWeight="SemiBold"
+                           Padding="4 0 0 0"
+                           VerticalAlignment="Center">
+                </TextBlock>
+            </Border>
+
+            <DatePicker x:Name="dpDateTo" 
+                        xml:lang="en-US"
+                        Style="{StaticResource DatePickerStyle}"
+                        BorderThickness="0 1 0 1"
+                        FirstDayOfWeek="Monday"
+                        Padding="0 5 0 5">
+                <DatePicker.Resources>
+                    <Style TargetType="DatePickerTextBox">
+                        <Setter Property="Text" Value=" Date to"/>
+                        <Setter Property="IsReadOnly" Value="True"/>
+                        <Setter Property="Focusable" Value="False"/>
+                        <Setter Property="Control.Template">
+                            <Setter.Value>
+                                <ControlTemplate>
+                                    <TextBox x:Name="TextBoxTo"
+                                             Text="{Binding Path=SelectedDate, 
+                                                    StringFormat='dd.MM.yyyy', 
+                                                    RelativeSource={RelativeSource AncestorType={x:Type DatePicker}}}"
+                                             Padding="5 0 0 0"/>
+                                </ControlTemplate>
+                            </Setter.Value>
+                        </Setter>
+                    </Style>
+                </DatePicker.Resources>
+            </DatePicker>
+
+            <Border Height="30"
+                       Width="5"
+                       HorizontalAlignment="Left"
+                       Background="DeepSkyBlue"
+                       BorderBrush="Black"
+                       BorderThickness="0 1 1 1"
+                       CornerRadius="0 3 3 0">
+            </Border>
+
+        </StackPanel>
+
         <TextBlock x:Name="tbOrdersCount"
-                   Grid.Row="1"
+                   Grid.Row="2"
                    Grid.Column="0"
                    Text="{Binding OrdersCount, 
             Source={StaticResource AllOrdersViewModel},
             UpdateSourceTrigger=PropertyChanged}"
                    FontSize="20"
-                   Margin="20 0 0 10">
+                   Margin="25 10 0 0"
+                   VerticalAlignment="Center">
 
         </TextBlock>
 
         <DataGrid x:Name="dgOrders"
-                  Grid.Row="2"
+                  Grid.Row="3"
                   Grid.ColumnSpan="2"
                   Width="600"
                   Padding="10 0 10 20"
