--- a/MyFlatWPF/View/ManagementWindow.xaml
+++ b/MyFlatWPF/View/ManagementWindow.xaml
@@ -240,7 +240,7 @@
                         </Border>
                         <Border BorderThickness="0 0 0 0">
                             <Button x:Name="btnAddRoleToUser"
-                        Content="Add Role User"
+                        Content="Add User"
                         Margin="0 10 0 0"
                         Width="140"
                         Style="{StaticResource ButtonExpanderStyle}"
